Show overdue days in task list.

--- a/config/locales/en/admin/task_statistics.json5
+++ b/config/locales/en/admin/task_statistics.json5
@@ -18,6 +18,7 @@
         completed_count: "Completed",
         last_completed: "Last Completed",
         last_completer: "Last Completed By",
+        overdue: "Overdue",
         score: "Score",
         never: "Never",
         no_cards: "No tasks available.",
