Add member preferences statistics page

--- a/config/locales/en/admin/task_statistics.json5
+++ b/config/locales/en/admin/task_statistics.json5
@@ -23,4 +23,14 @@
         never: "Never",
         no_cards: "No tasks available.",
     },
+    member_preferences: {
+        title: "Member Preferences",
+        description: "Statistics about survey questions asked to members by the task system.",
+        no_data: "No preference data available yet.",
+        no_responses: "No responses yet.",
+        total_respondents: "{{count}} members have answered this question",
+        option: "Option",
+        count: "Count",
+        percentage: "Percentage",
+    },
 }
