Various improvements to the task delegator.

--- a/config/locales/en/admin/task_statistics.json5
+++ b/config/locales/en/admin/task_statistics.json5
@@ -20,6 +20,10 @@
         last_completer: "Last Completed By",
         overdue: "Overdue",
         score: "Score",
+        score_for_member: "Calculate score for member",
+        search_member_placeholder: "Search for member...",
+        showing_scores_for_member: "Showing scores calculated for {{name}}",
+        status: "Status",
         never: "Never",
         no_cards: "No tasks available.",
     },
