--- a/config/locales/sv/admin/task_statistics.json5
+++ b/config/locales/sv/admin/task_statistics.json5
@@ -20,6 +20,10 @@
         last_completer: "Senast slutförd av",
         overdue: "Försenad",
         score: "Poäng",
+        score_for_member: "Beräkna poäng för medlem",
+        search_member_placeholder: "Sök efter medlem...",
+        showing_scores_for_member: "Visar poäng beräknade för {{name}}",
+        status: "Status",
         never: "Aldrig",
         no_cards: "Inga uppgifter tillgängliga.",
     },
