Make it possible to retake quizzes.

--- a/config/locales/en/admin/member_quizzes.json5
+++ b/config/locales/en/admin/member_quizzes.json5
@@ -6,5 +6,7 @@
         quiz: "Quiz",
         correctly_answered: "Correctly answered questions",
         completion: "Completion",
+        status: "Status",
+        max_achieved: "max achieved",
     },
 }
