--- a/config/locales/sv/admin/member_quizzes.json5
+++ b/config/locales/sv/admin/member_quizzes.json5
@@ -6,5 +6,7 @@
         quiz: "Quiz",
         correctly_answered: "Rätt besvarade frågor",
         completion: "Slutförande",
+        status: "Status",
+        max_achieved: "max uppnått",
     },
 }
