--- a/admin/package.json
+++ b/admin/package.json
@@ -17,21 +17,21 @@
         "chartjs-plugin-zoom": "^2.2.0",
         "classnames": "^2.3.1",
         "colorbrewer": "^1.5.9",
+        "frontend_common": "file:../frontend_common",
         "html5-qrcode": "^2.3.8",
+        "i18next": "^24.2.2",
+        "i18next-browser-languagedetector": "^8.0.4",
         "luxon": "^3.5.0",
         "prop-types": "^15.7.2",
         "react": "^18.0.0",
         "react-day-picker": "^9.5",
         "react-dom": "^18.0.0",
+        "react-i18next": "^15.4.1",
         "react-router": "^7.9",
         "react-router-dom": "^7.9",
         "react-select": "^5.9",
         "uikit": "^3.22.0",
-        "underscore": "^1.13.0",
-        "frontend_common": "file:../frontend_common",
-        "i18next": "^24.2.2",
-        "i18next-browser-languagedetector": "^8.0.4",
-        "react-i18next": "^15.4.1"
+        "underscore": "^1.13.0"
     },
     "devDependencies": {
         "@babel/core": "^7.13.15",
@@ -60,7 +60,7 @@
         "typescript": "^5.9.2",
         "webpack": "^5.95.0",
         "webpack-cli": "^5.0.1",
-        "webpack-dev-server": "^4.11.1",
+        "webpack-dev-server": "^5.2.3",
         "webpack-merge": "^5.8.0"
     },
     "scripts": {
