--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -7,17 +7,17 @@ ENV TZ=Europe/Stockholm
 RUN mkdir -p /work/src && mkdir -p /work/dist/js
 
 # Copy package file first, to avoid having to install dependencies every time a source file is updated
-COPY ./webpack.config.js ./tsconfig.json ./package.json ./package-lock.json /work/
+COPY admin/webpack.config.js admin/tsconfig.json admin/package.json admin/package-lock.json /work/
 
 WORKDIR /work
 
 RUN npm ci --install-links=false
 
-COPY --from=frontend_common . /frontend_common
-COPY --from=config . /config
-COPY --from=scripts build_locales.py /scripts/
-COPY ./src/ /work/src
-COPY ./jestSetup.js /work/
+COPY frontend_common /frontend_common
+COPY config /config
+COPY scripts/build_locales.py /scripts/
+COPY admin/src/ /work/src
+COPY admin/jestSetup.js /work/
 
 RUN npm run build
 RUN echo tsc --version
@@ -27,14 +27,13 @@ RUN uv run /scripts/build_locales.py --locale-path=/config/locales --locale-over
 FROM nginx:alpine@sha256:74175cf34632e88c6cfe206897cbfe2d2fecf9bf033c40e7f9775a3689e8adc7
 
 # Configuration file for nginx
-COPY ./docker/nginx_default_host /etc/nginx/conf.d/default.conf
+COPY admin/docker/nginx_default_host /etc/nginx/conf.d/default.conf
 
 # Add files to web root
 RUN mkdir -p /var/www/html
-COPY ./dist/ /var/www/html
 COPY --from=0 /work/dist/ /var/www/html
 
 EXPOSE 80
 
-COPY ./docker/docker_entrypoint.sh /usr/local/myscripts/docker_entrypoint.sh
+COPY admin/docker/docker_entrypoint.sh /usr/local/myscripts/docker_entrypoint.sh
 CMD ["/usr/local/myscripts/docker_entrypoint.sh"]
