--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,66 @@
+[project]
+name = "makeradmin"
+version = "1.0.0"
+description = "Member management system for makerspaces"
+readme = "README.md"
+requires-python = ">=3.11"
+dependencies = [
+    "flask",
+    "flask-cors",
+    "sqlalchemy~=2.0.0",
+    "gunicorn",
+    "cryptography",
+    "rocky>=1,<2",
+    "PyMySQL",
+    "requests",
+    "redis",
+    "python-dotenv",
+    "bcrypt",
+    "stripe==7.8.2",
+    "jsonschema",
+    "jinja2",
+    "ipython",
+    "Pillow",
+    "Phonenumbers",
+    "schedule",
+    "python-dateutil",
+    "types-python-dateutil",
+    "types-requests",
+    "types-markdown",
+    "types-PyMySQL",
+    "types-redis",
+    "markdown",
+    "NamedAtomicLock",
+    "dataclasses-json",
+    "pyserde",
+    "pyjson5",
+    "slack-sdk",
+]
+
+[project.optional-dependencies]
+dev = [
+    "ruff==0.6.9",
+    "pre-commit",
+]
+test = [
+    "pytest<7.2.0",
+    "pytest-parallel<7.2.0",
+    "selenium",
+    "faker",
+    "debugpy",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "ruff==0.6.9",
+    "pre-commit",
+    "pytest<7.2.0",
+    "pytest-parallel<7.2.0",
+    "selenium",
+    "faker",
+    "debugpy",
+]
+
 [tool.ruff]
 line-length = 120
 exclude = [".venv", "api/src/i18n"]
