--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,10 +15,10 @@ services:
       DEV_RUN: "true"
       TEST_SERVICE_TOKEN:
 
-  email-dispatcher:
+  message-dispatcher:
     volumes:
       - ./api/src:/work/src
-      - ./logs/email_dispatcher:/work/logs
+      - ./logs/message_dispatcher:/work/logs
       - ./config:/config:ro
       - ./scripts:/scripts:ro
     environment:
