--- a/config/locales/en/member_portal/member_page.json5
+++ b/config/locales/en/member_portal/member_page.json5
@@ -111,5 +111,25 @@
         task_delegation_description: "A bot will occasionally send you small tasks on Slack to help maintain the makerspace. These are suggestions and helpful advice. Unchecking this does not free you from the obligation that all members have to help maintain the makerspace.",
         slack_description: "Slack is our primary communication platform. Join to ask questions, get news, and connect with other members.",
         email_reminder: "Make sure to use the same email address ({{email}}) when joining Slack.",
+        username_label: "Slack username",
+        email_header: "Slack Email Address",
+        email_description: "If you use a different email address for Slack than your member email, you can set it here. This helps the system find your Slack account for notifications and task delegation.",
+        current_email_label: "Current email used for Slack",
+        using_override_notice: "You are using a custom email address for Slack.",
+        email_placeholder: "your-slack-email@example.com",
+        set_email_button: "Set custom Slack email",
+        change_email_button: "Change Slack email",
+        clear_email_button: "Use member email",
+        save_email_error_title: "Failed to save Slack email",
+        clear_email_error_title: "Failed to clear Slack email",
+        verification_sent_title: "Verify Your Slack Account",
+        verification_sent_message: "Found your Slack account for {{email}}!",
+        verification_check_slack: "Please check Slack and click 'Confirm' to complete the linking process. This verification will expire in 15 minutes.",
+        account_not_found_error: "No Slack account found with that email address. Please check the email or join Slack first.",
+    },
+    common: {
+        save: "Save",
+        saving: "Saving...",
+        cancel: "Cancel",
     },
 }
