--- a/config/locales/sv/member_portal/member_page.json5
+++ b/config/locales/sv/member_portal/member_page.json5
@@ -111,5 +111,25 @@
         task_delegation_description: "En bot kommer ibland skicka dig små uppgifter på Slack för att hjälpa till att underhålla makerspacet. Dessa är förslag och hjälpsamma råd. Att avmarkera detta befriar dig inte från skyldigheten som alla medlemmar har att hjälpa till att underhålla makerspacet.",
         slack_description: "Slack är vår primära kommunikationsplattform. Gå med för att få ställa frågor, få nyheter, och kommunicera med andra medlemmar.",
         email_reminder: "Se till att använda samma e-postadress ({{email}}) när du går med i Slack.",
+        username_label: "Slack-användarnamn",
+        email_header: "Slack e-postadress",
+        email_description: "Om du använder en annan e-postadress för Slack än din medlems-e-post kan du ange den här. Detta hjälper systemet att hitta ditt Slack-konto för notifikationer och uppgiftsdelegering.",
+        current_email_label: "Nuvarande e-post för Slack",
+        using_override_notice: "Du använder en anpassad e-postadress för Slack.",
+        email_placeholder: "din-slack-epost@exempel.se",
+        set_email_button: "Ange anpassad Slack-e-post",
+        change_email_button: "Ändra Slack-e-post",
+        clear_email_button: "Använd medlems-e-post",
+        save_email_error_title: "Misslyckades att spara Slack-e-post",
+        clear_email_error_title: "Misslyckades att ta bort Slack-e-post",
+        verification_sent_title: "Verifiera ditt Slack-konto",
+        verification_sent_message: "Hittade ditt Slack-konto för {{email}}!",
+        verification_check_slack: "Kontrollera Slack och klicka på 'Bekräfta' för att slutföra länkningen. Denna verifiering upphör om 15 minuter.",
+        account_not_found_error: "Inget Slack-konto hittades med den e-postadressen. Kontrollera e-postadressen eller gå med i Slack först.",
+    },
+    common: {
+        save: "Spara",
+        saving: "Sparar...",
+        cancel: "Avbryt",
     },
 }
